--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "antd": "^3.9.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "yarn": "^1.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
