--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,9 @@ cache:
   paths:
     - node_modules/
 
-tags:
-  - shared
+job:
+  tags:
+    - shared
 
 before_script:
   - npm install
@@ -26,4 +27,3 @@ pages:
       - public # GitLab pages serve from a 'public' directory
   only:
     - master # run on master branch
-    - tags
