--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "searchableapi",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "antd": "^3.9.2",
+    "express": "^4.16.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-scripts": "1.1.5",
