--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "searchableapi",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": ".",
   "dependencies": {
     "antd": "^3.9.2",
