--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,8 @@ pages:
     - CI=false npm run build
     - rm -rf public
     - mv build public
+  variables:
+    - PUBLIC_URL: "/searchable-movies"
   tags:
     - shared
   artifacts:
