--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ test:
 pages:
   stage: deploy
   script:
-    - CI=false npm run build
+    - CI=true npm run build
     - rm -rf public
     - mv build public
   tags:
